--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.6",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.5.5",
+    "siiimple-toast": "^3.1.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
